--- a/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletProgressCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletProgressCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -39,7 +39,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="In progress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TlK-Sl-djr">
-                                <rect key="frame" x="15" y="15" width="71.5" height="17"/>
+                                <rect key="frame" x="15" y="15" width="70.5" height="16.5"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
                                 <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -52,7 +52,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="LQy-uL-llp">
-                                <rect key="frame" x="15" y="52" width="270" height="115"/>
+                                <rect key="frame" x="15" y="51.5" width="270" height="115"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="lgf-Cy-nCD">
                                         <rect key="frame" x="0.0" y="0.0" width="270" height="55"/>
@@ -83,7 +83,7 @@
                                                         <rect key="frame" x="32" y="0.0" width="16.5" height="55"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Mp8-tI-hcy">
-                                                                <rect key="frame" x="0.0" y="0.0" width="29.5" height="30"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="28" height="30"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="30" id="leH-hU-LVw"/>
                                                                 </constraints>
@@ -91,8 +91,6 @@
                                                                 <color key="textColor" red="0.85490196080000003" green="0.40784313729999999" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-<<<<<<< HEAD
-=======
                                                             <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconSymbol" translatesAutoresizingMaskIntoConstraints="NO" id="Ccv-X7-xeS">
                                                                 <rect key="frame" x="32" y="6.5" width="14" height="21"/>
                                                                 <constraints>
@@ -100,9 +98,8 @@
                                                                     <constraint firstAttribute="height" constant="21" id="HaA-Of-UoT"/>
                                                                 </constraints>
                                                             </imageView>
->>>>>>> beam_game
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+2 USD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BcS-EM-zM9">
-                                                                <rect key="frame" x="2" y="33" width="46" height="17"/>
+                                                                <rect key="frame" x="2" y="33" width="49.5" height="17"/>
                                                                 <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="14"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
@@ -111,7 +108,9 @@
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstItem="Mp8-tI-hcy" firstAttribute="leading" secondItem="nZD-ff-GLJ" secondAttribute="leading" id="4n4-Iz-HNn"/>
+                                                            <constraint firstItem="Ccv-X7-xeS" firstAttribute="centerY" secondItem="Mp8-tI-hcy" secondAttribute="centerY" constant="2" id="KvK-ck-On0"/>
                                                             <constraint firstItem="Mp8-tI-hcy" firstAttribute="top" secondItem="nZD-ff-GLJ" secondAttribute="top" id="QpE-3L-2FS"/>
+                                                            <constraint firstItem="Ccv-X7-xeS" firstAttribute="leading" secondItem="Mp8-tI-hcy" secondAttribute="trailing" constant="4" id="nXJ-li-TPK"/>
                                                             <constraint firstItem="BcS-EM-zM9" firstAttribute="leading" secondItem="nZD-ff-GLJ" secondAttribute="leading" constant="2" id="q5F-SB-niu"/>
                                                             <constraint firstAttribute="bottom" secondItem="BcS-EM-zM9" secondAttribute="bottom" constant="5" id="scR-mw-WRc"/>
                                                             <constraint firstItem="BcS-EM-zM9" firstAttribute="top" secondItem="Mp8-tI-hcy" secondAttribute="bottom" constant="3" id="vSy-P0-UWk"/>
@@ -150,7 +149,7 @@
                                                         <rect key="frame" x="32" y="0.0" width="16.5" height="55"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="4zo-QS-DQR">
-                                                                <rect key="frame" x="0.0" y="0.0" width="29.5" height="30"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="28" height="30"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="30" id="PFu-LP-VMa"/>
                                                                 </constraints>
@@ -158,8 +157,6 @@
                                                                 <color key="textColor" red="0.043137254899999998" green="0.80000000000000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-<<<<<<< HEAD
-=======
                                                             <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconSymbol" translatesAutoresizingMaskIntoConstraints="NO" id="KAF-xz-dMa">
                                                                 <rect key="frame" x="32" y="6.5" width="14" height="21"/>
                                                                 <constraints>
@@ -167,9 +164,8 @@
                                                                     <constraint firstAttribute="height" constant="21" id="MLc-bi-AK4"/>
                                                                 </constraints>
                                                             </imageView>
->>>>>>> beam_game
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+2 USD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NJb-XI-LGz">
-                                                                <rect key="frame" x="2" y="33" width="46" height="17"/>
+                                                                <rect key="frame" x="2" y="33" width="49.5" height="17"/>
                                                                 <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="14"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
@@ -178,8 +174,10 @@
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstItem="4zo-QS-DQR" firstAttribute="top" secondItem="65s-hh-wsy" secondAttribute="top" id="2HN-rq-taj"/>
+                                                            <constraint firstItem="KAF-xz-dMa" firstAttribute="leading" secondItem="4zo-QS-DQR" secondAttribute="trailing" constant="4" id="3vU-C8-fpK"/>
                                                             <constraint firstItem="NJb-XI-LGz" firstAttribute="leading" secondItem="65s-hh-wsy" secondAttribute="leading" constant="2" id="TJZ-k9-in1"/>
                                                             <constraint firstAttribute="bottom" secondItem="NJb-XI-LGz" secondAttribute="bottom" constant="5" id="Ufi-m8-am5"/>
+                                                            <constraint firstItem="KAF-xz-dMa" firstAttribute="centerY" secondItem="4zo-QS-DQR" secondAttribute="centerY" constant="2" id="fCl-Nu-qPF"/>
                                                             <constraint firstItem="NJb-XI-LGz" firstAttribute="top" secondItem="4zo-QS-DQR" secondAttribute="bottom" constant="3" id="tuO-W4-guG"/>
                                                             <constraint firstItem="4zo-QS-DQR" firstAttribute="leading" secondItem="65s-hh-wsy" secondAttribute="leading" id="zI4-Kl-SoZ"/>
                                                         </constraints>
@@ -230,6 +228,8 @@
             <viewLayoutGuide key="safeArea" id="FbY-f8-F2B"/>
             <connections>
                 <outlet property="arrowIcon" destination="kO2-nM-Mbs" id="0Ez-HM-jB6"/>
+                <outlet property="currencyReceivingIcon" destination="KAF-xz-dMa" id="erg-ci-M7a"/>
+                <outlet property="currencySendingIcon" destination="Ccv-X7-xeS" id="3O8-mm-q1G"/>
                 <outlet property="mainButton" destination="NHf-s5-cUd" id="rkb-6D-STW"/>
                 <outlet property="mainStackView" destination="LQy-uL-llp" id="hcg-rd-H1X"/>
                 <outlet property="mainView" destination="Mdh-nY-eDo" id="yrE-uQ-ayL"/>
@@ -248,5 +248,6 @@
         <image name="icon-received" width="22" height="22"/>
         <image name="icon-sent" width="22" height="22"/>
         <image name="iconDownArrow" width="13" height="8"/>
+        <image name="iconSymbol" width="16" height="24.5"/>
     </resources>
 </document>
