--- a/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletTransactionSearchCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletTransactionSearchCell.xib
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="SF-Pro-Display-Bold.otf">
             <string>SFProDisplay-Bold</string>
+        </array>
+        <array key="SF-Pro-Display-Light.otf">
+            <string>SFProDisplay-Light</string>
         </array>
         <array key="SF-Pro-Display-Regular.otf">
             <string>SFProDisplay-Regular</string>
@@ -86,10 +89,10 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="dhp-eX-Z1e">
-                                <rect key="frame" x="194" y="20.5" width="88" height="29"/>
+                                <rect key="frame" x="194" y="20.5" width="88" height="50"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sx6-PN-EDm">
-                                        <rect key="frame" x="0.0" y="0.0" width="88" height="29"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="88" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+ 0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="aBt-ab-epn">
                                                 <rect key="frame" x="0.0" y="0.0" width="88" height="29"/>
@@ -100,12 +103,20 @@
                                                 <color key="textColor" red="0.043137254899999998" green="0.80000000000000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 USD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UkP-m9-31W">
+                                                <rect key="frame" x="50" y="29" width="38" height="17"/>
+                                                <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="14"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="aBt-ab-epn" firstAttribute="leading" secondItem="Sx6-PN-EDm" secondAttribute="leading" id="4Oz-B2-5ip"/>
-                                            <constraint firstAttribute="height" constant="29" id="EK7-sU-RaH"/>
+                                            <constraint firstAttribute="trailing" secondItem="UkP-m9-31W" secondAttribute="trailing" id="Mu7-mX-obl"/>
+                                            <constraint firstAttribute="height" constant="50" id="WKI-66-L5b"/>
                                             <constraint firstItem="aBt-ab-epn" firstAttribute="top" secondItem="Sx6-PN-EDm" secondAttribute="top" id="WR4-dG-jGG"/>
+                                            <constraint firstItem="UkP-m9-31W" firstAttribute="top" secondItem="aBt-ab-epn" secondAttribute="bottom" id="WlJ-iz-jdf"/>
                                             <constraint firstAttribute="trailing" secondItem="aBt-ab-epn" secondAttribute="trailing" id="mBy-Yn-Syc"/>
                                         </constraints>
                                     </view>
@@ -137,14 +148,15 @@
                     <constraint firstAttribute="trailing" secondItem="fKt-Vb-Zkz" secondAttribute="trailing" id="gkQ-Uv-XzF"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="amountLabel" destination="aBt-ab-epn" id="1w6-GU-Uea"/>
                 <outlet property="balanceView" destination="Sx6-PN-EDm" id="qmv-re-NFw"/>
                 <outlet property="dateLabel" destination="4ho-1u-9fd" id="G6S-NY-L8Y"/>
                 <outlet property="mainView" destination="fKt-Vb-Zkz" id="sq1-M0-hYG"/>
                 <outlet property="searchLabel" destination="ibY-g7-kSP" id="f9v-BU-6im"/>
+                <outlet property="secondAvailableLabel" destination="UkP-m9-31W" id="Y6j-Xs-mDu"/>
                 <outlet property="statusIcon" destination="Mdl-WO-PTo" id="5Z8-Sk-bT2"/>
                 <outlet property="statusLabel" destination="Jwt-9z-uRX" id="9tg-pS-q6I"/>
                 <outlet property="typeLabel" destination="cfi-41-SbP" id="Q8I-4B-jjr"/>
