--- a/BeamWallet/ViewControllers/Main/QRCode/QRCodeSmallViewController.xib
+++ b/BeamWallet/ViewControllers/Main/QRCode/QRCodeSmallViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,7 +31,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view verifyAmbiguity="off" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="eJe-1d-dne" customClass="BaseView" customModule="BeamWallet" customModuleProvider="target">
-                    <rect key="frame" x="15" y="217.5" width="384" height="461"/>
+                    <rect key="frame" x="15" y="219" width="384" height="458.5"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6iJ-IU-Rq4">
                             <rect key="frame" x="341" y="3" width="40" height="40"/>
@@ -62,10 +63,10 @@
                             </constraints>
                         </view>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Mt3-aS-Vk4">
-                            <rect key="frame" x="15" y="260" width="354" height="90"/>
+                            <rect key="frame" x="15" y="260" width="354" height="87.5"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Arc-lE-Ovf">
-                                    <rect key="frame" x="0.0" y="0.0" width="354" height="90"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="354" height="87.5"/>
                                     <string key="text">Show this QR code to the sender or send it over an external secure channel.
 
 Please notice, that both you and sender should be online to succeed transaction!</string>
@@ -79,7 +80,7 @@ Please notice, that both you and sender should be online to succeed transaction!
                             </subviews>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hti-ZN-8GT" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
-                            <rect key="frame" x="114" y="380" width="156" height="44"/>
+                            <rect key="frame" x="114" y="377.5" width="156" height="44"/>
                             <color key="backgroundColor" red="0.043137254899999998" green="0.80000000000000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="JbB-7x-wOn"/>
@@ -122,16 +123,21 @@ Please notice, that both you and sender should be online to succeed transaction!
                     </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="ipj-qQ-9v0"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="eJe-1d-dne" secondAttribute="trailing" constant="15" id="aeZ-i5-CFm"/>
                 <constraint firstItem="eJe-1d-dne" firstAttribute="leading" secondItem="7gV-7i-f7e" secondAttribute="leading" constant="15" id="i5V-fQ-XFr"/>
                 <constraint firstItem="eJe-1d-dne" firstAttribute="centerY" secondItem="7gV-7i-f7e" secondAttribute="centerY" id="l80-cX-zlW"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ipj-qQ-9v0"/>
             <point key="canvasLocation" x="53.600000000000001" y="59.820089955022496"/>
         </view>
     </objects>
+    <designables>
+        <designable name="hti-ZN-8GT">
+            <size key="intrinsicContentSize" width="95" height="17"/>
+        </designable>
+    </designables>
     <resources>
         <image name="iconCancelBig" width="16" height="16"/>
         <image name="iconShareNew" width="16" height="16"/>
